...
    <!--- NotificationBarManager -->
    <string name="NotificationBarManager_signal_call_in_progress">Signal call in progress</string>
    <string name="NotificationBarManager__establishing_signal_call">Establishing Signal call</string>
    <string name="NotificationBarManager__incoming_signal_call">Incoming Signal call</string>
    <string name="NotificationBarManager__deny_call">Deny call</string>
    <string name="NotificationBarManager__answer_call">Answer call</string>
    <string name="NotificationBarManager__end_call">End call</string>
    <string name="NotificationBarManager__cancel_call">Cancel call</string>

    <!-- NotificationMmsMessageRecord -->
    <string name="NotificationMmsMessageRecord_multimedia_message">Multimedia message</string>
    <string name="NotificationMmsMessageRecord_downloading_mms_message">Downloading MMS message</string>
    <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Error downloading MMS message, tap to retry</string>
...

    <!-- **************************************** -->
    <!-- menus -->
    <!-- **************************************** -->

    <!-- contact_selection_list -->
    <string name="contact_selection_list__unknown_contact">New message to...</string>

    <!-- conversation_callable_insecure -->
    <string name="conversation_callable_insecure__menu_call">Call</string>

    <!-- conversation_callable_secure -->
    <string name="conversation_callable_secure__menu_call">Signal call</string>

    <!-- conversation_context -->
    <string name="conversation_context__menu_message_details">Message details</string>
    <string name="conversation_context_menu_textToSpeech_message">Text to Speech Message</string>
    <string name="conversation_context__menu_copy_text">Copy text</string>
    <string name="conversation_context__menu_star_message">Star Message</string>
...

    <string name="conversation_list_item_inbox_zero__inbox_zeeerrro">Inbox zeeerrro</string>
    <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zip. Zilch. Zero. Nada.\nYou\'re all caught up!</string>


    <!-- conversation_list_fragment -->
    <string name="conversation_list_fragment__fab_content_description">New conversation</string>
    <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Give your inbox something to write home about. Get started by messaging a friend.</string>


    <!-- conversation_secure_verified -->
    <string name="conversation_secure_verified__menu_reset_secure_session">Reset secure session</string>

...
