...

        <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:nextFocusDown="@+id/fab"
                android:nextFocusForward="@+id/fab"
                tools:listitem="@layout/conversation_list_item_view" />

    </LinearLayout>


...
